<resources>
    <string name="app_name">Bat Box</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_sum">+</string>
    <string name="_subs">-</string>
    <string name="_mul">x</string>
    <string name="_div">÷</string>
    <string name="_del">del</string>
    <string name="_comma">.</string>
    <string name="_equal">=</string>
    <string name="_openPar">(</string>
    <string name="_closePar">)</string>
    <string name="_ans">ans</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="toast_notification">Toast Notification</string>
    <string name="state_notification">State Notification</string>
    <string name="call">Call</string>
    <string name="logout">Log out</string>
    <string name="toast_notification_text">Wrong expression</string>
    <string name="open_browser">Open browser</string>
    <string name="profile">Profile</string>
    <string name="game">Memory game</string>
    <string name="song_player">Music player</string>

    <string name="ranking">Ranking</string>
    <string name="calculator">Calculator</string>

    <string name="profile_points">Memory game record:</string>
    <string name="profile_moves">Moves</string>
    <string name="profile_position">Your current position:</string>
    <string name="default_current_position">Unknown</string>

    <string name="welcome_title">Welcome to Bat Box</string>
    <string name="username_hint">User name</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Enter as Guest</string>

    <string name="memory_moves_indicator">Moves:</string>

    <string name="restart_memory">Restart</string>
    <string name="reset_ranking_data">Reset ranking</string>
    <string name="has_not_played">You haven\'t played yet</string>

    <string-array name="tutorial_content">
        <item>Hello there! We see that you\'re new to Bat Box, so let\'s take a look about what you can do</item>
        <item>In your profile, you can see your user name, your current record in memory game, and your current location (if you let us know, of course!)</item>
        <item>We think this is very obvious, yes, it\'s a calculator, but not a simple one, you can call with it and open your internet browser!</item>
        <item>This game will test your memory skills, flip two cards so they are equals until you find all matches!</item>
        <item>Here you can get competitive in memory game. Your results will be shown compared to all users, it\'s time to demonstrate your true skills!</item>
        <item>It\'s allways nice to listen to your favorite music!</item>
        <item>So, that\'s all, we hope you enjoy this app!</item>
    </string-array>

    <string-array name="tutorial_titles">
        <item>Welcome!</item>
        <item>Profile</item>
        <item>Calculator</item>
        <item>Memory game</item>
        <item>Ranking</item>
        <item>Music player</item>
        <item>Thank you!</item>
    </string-array>
</resources>
