<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/groupApp"
        android:checkableBehavior="single">
        <item android:title="@string/profile"
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"/>
        <item android:title="@string/calculator"
            android:id="@+id/calculator"
            android:icon="@drawable/ic_calculator"/>
        <item android:id="@+id/game"
            android:title="@string/game"
            android:icon="@drawable/ic_game"/>
        <item android:title="@string/ranking"
            android:id="@+id/ranking"
            android:icon="@drawable/ic_ranking" />
        <item android:title="@string/song_player"
            android:id="@+id/musicPlayer"
            android:icon="@drawable/ic_player"/>
    </group>
    <group
        android:id="@+id/groupUser"
        android:checkableBehavior="single">
        <item android:title="@string/logout"
            android:id="@+id/logOut"
            android:icon="@drawable/ic_log_out"/>
    </group>
</menu>