<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_weight="1"
        android:paddingEnd="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/input"
            android:maxLines="1"
            android:text="@string/_0"
            android:textSize="35sp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:layout_height="match_parent"
            android:layout_width="0dp" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:paddingEnd="10dp"
        android:paddingRight="10dp">
        <TextView
            android:id="@+id/result"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:gravity="end|center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp" />
    </TableRow>

    <TableRow
        android:layout_weight="1">
        <Button
            android:id="@+id/_ans"
            android:layout_weight="1"
            android:text="@string/_ans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonFuncStyle" />
        <Button
            android:id="@+id/_openPar"
            android:layout_weight="1"
            android:text="@string/_openPar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonFuncStyle" />
        <Button
            android:id="@+id/_closePar"
            android:layout_weight="1"
            android:text="@string/_closePar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonFuncStyle" />
        <Button
            android:id="@+id/_del"
            android:layout_weight="1"
            android:text="@string/_del"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonFuncStyle"/>
    </TableRow>

    <TableRow
        android:layout_weight="1">
        <Button
            android:id="@+id/_7"
            android:layout_weight="1"
            android:text="@string/_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle" />
        <Button
            android:id="@+id/_8"
            android:layout_weight="1"
            android:text="@string/_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle" />

        <Button
            android:id="@+id/_9"
            android:layout_weight="1"
            android:text="@string/_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle" />

        <Button
            android:id="@+id/_div"
            android:layout_weight="1"
            android:text="@string/_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonFuncStyle"/>
    </TableRow>

    <TableRow
        android:layout_weight="1">
        <Button
            android:id="@+id/_4"
            android:layout_weight="1"
            android:text="@string/_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle" />
        <Button
            android:id="@+id/_5"
            android:layout_weight="1"
            android:text="@string/_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle" />
        <Button
            android:id="@+id/_6"
            android:layout_weight="1"
            android:text="@string/_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle" />
        <Button
            android:id="@+id/_mul"
            android:layout_weight="1"
            android:text="@string/_mul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonFuncStyle"/>
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/_1"
            android:layout_weight="1"
            android:text="@string/_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle"/>
        <Button
            android:id="@+id/_2"
            android:layout_weight="1"
            android:text="@string/_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle"/>
        <Button
            android:id="@+id/_3"
            android:layout_weight="1"
            android:text="@string/_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle"/>
        <Button
            android:id="@+id/_subs"
            android:layout_weight="1"
            android:text="@string/_subs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonFuncStyle"/>
    </TableRow>

    <TableRow
        android:layout_weight="1">
        <Button
            android:id="@+id/_comma"
            android:layout_weight="1"
            android:text="@string/_comma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle"/>
        <Button
            android:id="@+id/_0"
            android:layout_weight="1"
            android:text="@string/_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle"/>
        <Button
            android:id="@+id/_equal"
            android:layout_weight="1"
            android:text="@string/_equal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonNumberStyle"/>
        <Button
            android:id="@+id/_sum"
            android:layout_weight="1"
            android:text="@string/_sum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonFuncStyle"/>
    </TableRow>
</TableLayout>