<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:gravity="center_horizontal"
        android:textSize="50sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/loginText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/username_hint"
        android:layout_marginBottom="15dp"/>
    <EditText
        android:id="@+id/passwordText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <Button
        android:id="@+id/login"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"/>

</LinearLayout>