<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:text="@string/profile_points"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingStart="25dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/movesWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/profile_moves"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/currentPositionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:text="@string/profile_position"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/currentPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="25dp"
        android:paddingStart="25dp"
        android:text="@string/default_current_position"
        android:textSize="30sp" />

</LinearLayout>